Name:                stb-truetype
Version:             0.1.2
Synopsis:            A wrapper around Sean Barrett's TrueType rasterizer library.
Description:         A wrapper around Sean Barrett's TrueType rasterizer library.
License:             PublicDomain
License-file:        LICENSE
Author:              Balazs Komuves
Maintainer:          bkomuves (plus) hackage (at) gmail (dot) com
Homepage:            http://code.haskell.org/~bkomuves/
Stability:           Experimental
Category:            Graphics
Tested-With:         GHC == 7.8.2
Cabal-Version:       >= 1.20
Build-Type:          Simple

Extra-Source-Files:  cbits/stb_truetype.h

Library
  Default-Language:    Haskell2010
  Build-Depends:       base, array, containers, bytestring
  Exposed-Modules:     Graphics.Rendering.TrueType.STB

  Hs-Source-Dirs:      .
  Other-Extensions:    ForeignFunctionInterface, CPP

  C-Sources:           cbits/wrapper.c
  Cc-Options:          -fPIC
  Include-Dirs:        cbits
